youfull/objects/ALM_Rep_Performance_1__c.object
<CustomObject>
    <fields>
        <fullName>MRKT_KEY__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>ALM Rep Performance</relationshipLabel>
        <relationshipName>ALM_Rep_Performance_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRKT_SUBMTD_SLS_AMT__c</fullName>
        <formula>IF(
   (
     ((IS_PREV_1_CMPGN__c==&quot;True&quot;) &amp;&amp; MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c &amp;&amp; 
        NOT(MRKT_KEY__r.CDW_DEDUCTED_RETURNS__c)
      ) || MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c
    ), SUBMTD_SLS_AMT__c, SUBMTD_AWRD_SLS_AMT__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Submitted Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MULT_ORD_CNT__c</fullName>
        <label>Multiple Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailPlan_Order_Oppty__c</fullName>
        <description>Lookup to corresponding record of MailPlan_Order_Oppty</description>
        <inlineHelpText>Lookup to corresponding record of MailPlan_Order_Oppty</inlineHelpText>
        <label>MailPlan_Order_Oppty</label>
        <referenceTo>MailPlan_Order_Oppty__c</referenceTo>
        <relationshipLabel>ALM Rep Performance</relationshipLabel>
        <relationshipName>ALM_Rep_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NET_SLS_AMT__c</fullName>
        <label>Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_TITL_ACHVER_IND__c</fullName>
        <label>New (First Time) Title Achiever</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_DLY_INVC_AWRD_SLS_AMT__c</fullName>
        <description>Invoiced Positive orders for today (since batch load)</description>
        <label>NRT Daily Invoice Award Amount</label>
        <summarizedField>Order_1__c.SLS_AMT__c</summarizedField>
        <summaryFilterItems>
            <field>Order_1__c.SLS_AMT__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.ORD_STUS_INVC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.CDW_PROC__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_DLY_INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <description>Invoiced Return orders for today (since batch load)</description>
        <label>NRT Daily Invoice Return Amount</label>
        <summarizedField>Order_1__c.SLS_AMT__c</summarizedField>
        <summaryFilterItems>
            <field>Order_1__c.SLS_AMT__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.ORD_STUS_INVC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.CDW_PROC__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_DLY_INVC_SLS_AMT__c</fullName>
        <description>Net amt (positive minus returns) of invoiced orders for today (since batch)</description>
        <formula>IF (MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c, (NRT_DLY_INVC_AWRD_SLS_AMT__c + NRT_DLY_INVC_RTURN_AWRD_SLS_AMT__c ), NRT_DLY_INVC_AWRD_SLS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Daily Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_HOLD_IS_ACTIVE__c</fullName>
        <formula>IF( (NRT_SBMTD_IS_ACTIVE__c == 1), 0, IF( (NRT_HOLD_ORDER_CNT__c &gt; 0), 1, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Submitted is Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_HOLD_ORDER_CNT__c</fullName>
        <description>Number of held orders for campaign</description>
        <label>NRT Hold Order Count</label>
        <summaryFilterItems>
            <field>Order_1__c.STUS_CD__c</field>
            <operation>equals</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_HOLD_SLS_AMT__c</fullName>
        <description>Roll-up: SLS_AMT__c WHERE SLS_AMT__c &gt; 0 AND STUS_CD__c = 4 (&quot;On Hold&quot;)</description>
        <label>NRT Held Amount</label>
        <summarizedField>Order_1__c.SLS_AMT__c</summarizedField>
        <summaryFilterItems>
            <field>Order_1__c.SLS_AMT__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.STUS_CD__c</field>
            <operation>equals</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_HOLD_SLS_DISPLAY__c</fullName>
        <formula>IF (NRT_HOLD_SLS_AMT__c &lt;&gt; 0, TEXT(NRT_HOLD_SLS_AMT__c),
     IF (NRT_HOLD_ORDER_CNT__c &gt; 0, &apos;$Label.ALM_Formula_Y&apos;, &apos;-&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Held Orders</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_INVC_AWRD_SLS_AMT__c</fullName>
        <description>Total amt of invoiced non-return orders for the campaign</description>
        <formula>INVC_AWRD_SLS_AMT__c + NRT_DLY_INVC_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Invoice Award Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_INVC_IS_ACTIVE__c</fullName>
        <description>Rep considered active based on the NRT invoiced data?</description>
        <formula>If ( CDW_Is_Active__c 
, 1 
, If ( 
(MRKT_KEY__r.NRT_ACTIVE_USES_NET__c) 
, IF((NRT_DLY_INVC_AWRD_SLS_AMT__c + NRT_DLY_INVC_RTURN_AWRD_SLS_AMT__c) &gt; 0 
, 1 
, 0 
) 
, IF(NRT_DLY_INVC_AWRD_SLS_AMT__c &gt; 0 
, 1 
, 0 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Invoice Is Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <description>Total amt of invoiced return orders for the campaign</description>
        <formula>INVC_RTURN_AWRD_SLS_AMT__c +  NRT_DLY_INVC_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Invoice Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_INVC_SLS_AMT__c</fullName>
        <description>Total net amt (positive minus returns) of invoiced orders for the campaign</description>
        <formula>IF ( (IS_PREV_1_CMPGN__c==&quot;True&quot;), MRKT_INVC_SLS_AMT__c, (MRKT_INVC_SLS_AMT__c + NRT_DLY_INVC_SLS_AMT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_IS_ACTIVE_APPT__c</fullName>
        <formula>IF(NRT_IS_ACTIVE__c &amp;&amp; (LOA_NR__c == 0), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT IS Active Appt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_IS_ACTIVE__c</fullName>
        <formula>IF ( MRKT_KEY__r.NRT_Enabled__c &amp;&amp; (IS_PREV_1_CMPGN__c==&quot;False&quot;), (NRT_INVC_IS_ACTIVE__c ==1 || NRT_SBMTD_IS_ACTIVE__c ==1), (MRKT_INVC_SLS_AMT__c &gt; 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT IS Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRT_SBMTD_IS_ACTIVE__c</fullName>
        <formula>IF(  (NRT_INVC_IS_ACTIVE__c ==0)
   , IF(MRKT_KEY__r.NRT_HAS_SUBMTD_AMT__c 
          , IF ( MRKT_KEY__r.NRT_ACTIVE_USES_NET__c 
                    , IF((NRT_SUBMTD_AWRD_SLS_AMT__c + NRT_SUBMTD_RTURN_AWRD_SLS_AMT__c &gt; 0)
                         , 1
                         , 0
                       )
                    , IF ( (NRT_SUBMTD_AWRD_SLS_AMT__c &gt; 0)
                           , 1
                           , 0
                      )
             )         
          , IF( (NRT_SUBMTD_AWRD_ORDER_CNT__c &gt; 0) 
                      , 1
                      , 0
               )
      )
    
   , 0 
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Submitted is Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_AWRD_ORDER_CNT__c</fullName>
        <description>Number of submitted non-return orders for campaign</description>
        <label>NRT Submitted Award Count</label>
        <summaryFilterItems>
            <field>Order_1__c.STUS_CD__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.ORD_STUS_SUBMTD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_AWRD_RTURN_ORDER_CNT__c</fullName>
        <description>Number of submitted return orders for campaign</description>
        <label>NRT Submitted Return Order Count</label>
        <summaryFilterItems>
            <field>Order_1__c.ORD_STUS_SUBMTD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.ORD_TYP__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_AWRD_SLS_AMT__c</fullName>
        <description>Roll-up: SLS_AMT__c WHERE SLS_AMT__c &gt; 0 AND STUS_CD__c = 2 (&quot;Submitted&quot;)</description>
        <label>NRT Submitted Award Sales</label>
        <summarizedField>Order_1__c.SLS_AMT__c</summarizedField>
        <summaryFilterItems>
            <field>Order_1__c.SLS_AMT__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.ORD_STUS_SUBMTD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_ORDER_CNT__c</fullName>
        <formula>IF (MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c, (NRT_SUBMTD_AWRD_ORDER_CNT__c + NRT_SUBMTD_AWRD_RTURN_ORDER_CNT__c),  NRT_SUBMTD_AWRD_ORDER_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Submitted Order Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <description>Roll-up: SLS_AMT__c WHERE SLS_AMT__c &lt;= 0 AND STUS_CD__c = 2 (&quot;Submitted&quot;)</description>
        <label>NRT Submitted Return Sales</label>
        <summarizedField>Order_1__c.SLS_AMT__c</summarizedField>
        <summaryFilterItems>
            <field>Order_1__c.SLS_AMT__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_1__c.ORD_STUS_SUBMTD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_SLS_AMT__c</fullName>
        <description>Total amt of submitted orders for campaign</description>
        <formula>IF (MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c, (NRT_SUBMTD_AWRD_SLS_AMT__c + NRT_SUBMTD_RTURN_AWRD_SLS_AMT__c) , NRT_SUBMTD_AWRD_SLS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Submitted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_SUBMTD_SLS_DISPLAY__c</fullName>
        <description>Display value for Submitted</description>
        <formula>IF ( (IS_PREV_1_CMPGN__c ==&quot;True&quot;), TEXT(MRKT_SUBMTD_SLS_AMT__c), 
IF (
    ((NRT_SUBMTD_AWRD_ORDER_CNT__c + NRT_SUBMTD_AWRD_RTURN_ORDER_CNT__c) &lt;= 0), &apos;-&apos;, IF ( 
        ((NRT_SUBMTD_AWRD_SLS_AMT__c &lt;&gt; 0) || (NRT_SUBMTD_RTURN_AWRD_SLS_AMT__c &lt;&gt; 0)), TEXT(NRT_SUBMTD_SLS_AMT__c), IF (
            (NRT_SUBMTD_AWRD_ORDER_CNT__c &gt; 0), &apos;$Label.ALM_Formula_Y&apos;, &apos;ALM_Formula_R&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted Personal Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_SVD_ORDER_AMT__c</fullName>
        <description>Roll up summary on saved order amount on the the order object.</description>
        <label>NRT Saved Order Amount</label>
        <summarizedField>Order_1__c.SLS_AMT__c</summarizedField>
        <summaryFilterItems>
            <field>Order_1__c.STUS_CD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_SVD_ORDER_CNT__c</fullName>
        <description>Number of saved orders for campaign</description>
        <label>NRT Saved Order Count</label>
        <summaryFilterItems>
            <field>Order_1__c.STUS_CD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_1__c.Genealogy_Key_1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NRT_SVD_SLS_DISPLAY__c</fullName>
        <formula>IF ( NRT_SVD_ORDER_CNT__c  &gt; 0, &quot;$Label.ALM_Formula_Y&quot;, &quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saved Personal Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_TOTAL_AWRD_SLS_AMT__c</fullName>
        <description>Total amt of invoiced and submitted non-return orders for the campaign</description>
        <formula>NRT_INVC_AWRD_SLS_AMT__c + NRT_SUBMTD_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Total Award Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_TOTAL_RTURN_AWRD_SLS_AMT__c</fullName>
        <description>Total amt of invoiced and submitted return orders for the campaign</description>
        <formula>NRT_INVC_RTURN_AWRD_SLS_AMT__c + NRT_SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Total Return Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_TOTAL_SLS_AMT__c</fullName>
        <description>Total net amt (positive minus returns) of invoiced and submitted orders for the campaign</description>
        <formula>NRT_INVC_SLS_AMT__c + IF ((IS_PREV_1_CMPGN__c ==&quot;True&quot;), MRKT_SUBMTD_SLS_AMT__c, NRT_SUBMTD_SLS_AMT__c)</formula>
        <label>Total Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRT_TOTAL_SLS_DISPLAY__c</fullName>
        <formula>IF(NRT_TOTAL_SLS_AMT__c != 0, text(NRT_TOTAL_SLS_AMT__c), IF (NRT_SUBMTD_ORDER_CNT__c &lt;= 0, &apos;-&apos;, &apos;0&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRT Total Potential Personal Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXT_BLCKD_SLS_REQD_AMT__c</fullName>
        <formula>IF (NXT_TITL_LVL_KEY__r.LDRSHP_TITL_LVL_NR_NUMBER__c &gt;=4,
IF( 
(GRP_BLCKD_UNIT_SLS_AMT__c -  NXT_TITL_LVL_KEY__r.MIN_BLCKD_SLS_REQD_AMT__c ) &lt; 0
, 
NXT_TITL_LVL_KEY__r.MIN_BLCKD_SLS_REQD_AMT__c - GRP_BLCKD_UNIT_SLS_AMT__c 
,
0), 
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in Blocked GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_DUE_DT__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NXT_LVL_MIN_PRSNL_SLS_REQD_AMT__c</fullName>
        <formula>IF( 
(MRKT_INVC_SLS_AMT__c  -  NXT_TITL_LVL_KEY__r.MIN_PRSNL_SLS_REQD_AMT__c) &lt; 0
,
NXT_TITL_LVL_KEY__r.MIN_PRSNL_SLS_REQD_AMT__c - MRKT_INVC_SLS_AMT__c 
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_MIN_G1_ACTV__c</fullName>
        <formula>IF( 
(GENTRTN_1_ACTV_REP_CNT__c -  NXT_TITL_LVL_KEY__r.MIN_REP_RCRTMNTS_REQD_NR__c) &lt; 0
,
NXT_TITL_LVL_KEY__r.MIN_REP_RCRTMNTS_REQD_NR__c - GENTRTN_1_ACTV_REP_CNT__c 
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in G1 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_MIN_GRP_SLS_REQD_AMT__c</fullName>
        <formula>IF (NXT_TITL_LVL_KEY__r.LDRSHP_TITL_LVL_NR_NUMBER__c &lt;4, 
IF( 
(MRKT_INVC_GRP_SLS_AMT__c - NXT_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c)&lt; 0
,
NXT_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c-MRKT_INVC_GRP_SLS_AMT__c 
,
0),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in Group Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_TITL_LVL_KEY__c</fullName>
        <label>Next Title</label>
        <referenceTo>Leader_Title__c</referenceTo>
        <relationshipLabel>ALM Rep Performance</relationshipLabel>
        <relationshipName>ALM_Rep_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_ABV_MOE_IND__c</fullName>
        <label>Order Above MVE (To Earn)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_HOLD_AMT__c</fullName>
        <label>Order on Hold Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_UND_MOE_IND__c</fullName>
        <label>Order Under MVE (To Earn)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_UND_MOV_IND__c</fullName>
        <label>Order Under MOV (For Discount)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAST_DUE_AMT__c</fullName>
        <label>Amount Overdue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAST_DUE_PCT__c</fullName>
        <description>The percent this Sales Leader has reached of amount Past Due in order to achieve title compared to the Maximum Past Due Percent for the Title.</description>
        <label>Past Due %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC1_INVC_AWRD_SLS_AMT__c</fullName>
        <description>Campaign 1 Prior - Award Sales Invoiced</description>
        <label>QV CC-1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC2_INVC_AWRD_SLS_AMT__c</fullName>
        <description>Campaign 2 Prior - Award Sales Invoiced</description>
        <label>QV CC-2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC3_INVC_AWRD_SLS_AMT__c</fullName>
        <description>Campaign 3 Prior - Award Sales Invoiced</description>
        <label>QV CC-3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_G1_IN_ZONE_NO_ORD_CNT__c</fullName>
        <label># G1 Inactive in Prior Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_CD__c</fullName>
        <label>Paid Title Code</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NAME__c</fullName>
        <label>Paid Title</label>
        <picklist>
            <picklistValues>
                <fullName>Non Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NR_NUMBER__c</fullName>
        <description>PD_TITL_LVL_NR__c converted into a number</description>
        <formula>VALUE(   PD_TITL_LVL_NR__c    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PD_TITL_LVL_NR__c converted into a number</inlineHelpText>
        <label>PD TITL LVL NR NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NR__c</fullName>
        <label>Paid Title (Closed Campaign)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREV_CYCL_LCL_TOP_SLR_LVL_KEY__c</fullName>
        <label>Prior Cycle Top Seller Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRFRMNC_LDRSHP_TITL_LANG_CD__c</fullName>
        <label>Performing Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSNL_DSCNT_AMT__c</fullName>
        <label>Personal Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_1_CNT__c</fullName>
        <label>Personal Market Tag 1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_2_AMT__c</fullName>
        <label>Personal Market Tag 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_3_TXTTRNS__c</fullName>
        <description>Personal Market Tag translation for boolean fields</description>
        <formula>CASE(PRSNL_MRKT_TAG_3_TXT__c, 
 &apos;Y&apos;, $Label.PRSNL_MRKT_TAG_3_TXTTRNSTRUE_LBL,
 &apos;N&apos;, $Label.PRSNL_MRKT_TAG_3_TXTTRNSFALSE_LBL,
 PRSNL_MRKT_TAG_3_TXT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Personal Market Tag translation for boolean fields</inlineHelpText>
        <label>Market Label 3 - Boolean Translation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_3_TXT__c</fullName>
        <label>Personal Market Tag 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_ABV_MOE__c</fullName>
        <formula>PRSNL_SLS_AMT__c&gt; MRKT_KEY__r.Minimum_to_Earn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Sales Above MOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_AMT__c</fullName>
        <formula>( INVC_AWRD_SLS_AMT__c  +  INVC_RTURN_AWRD_SLS_AMT__c  +  SUBMTD_AWRD_SLS_AMT__c +   SUBMTD_RTURN_AWRD_SLS_AMT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invc+Sbmt-Returns</inlineHelpText>
        <label>Personal Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_AWRD_AMT__c</fullName>
        <formula>INVC_AWRD_SLS_AMT__c +  SUBMTD_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoiced + Submited, returns are not deducted.</inlineHelpText>
        <label>Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_BLW_QLFR_REP_CNT__c</fullName>
        <label>Representative Below Personal Qualifier</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Info_Label_1__c</fullName>
        <label>Personal Info Label 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Info_Label_2__c</fullName>
        <label>Personal Info Label 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Performance_Key__c</fullName>
        <description>MRKT_CMPGN_ACCT_KEY</description>
        <inlineHelpText>MRKT_CMPGN_ACCT_KEY</inlineHelpText>
        <label>Personal Performance Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QLFYNG_STUS_PCT__c</fullName>
        <label>Qualifying Status (G1 SL Leader Color)</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPA_Achievement__c</fullName>
        <formula>IF(REP_OMS_STUS_CD__c = &apos;-2&apos;,

IF(Total_Award_Sales__c = 0,
&quot;Not Started&quot;,
IF(AND(FRST_ORDR_AMT__c &gt; 0, FRST_ORDER_DUE_DT__c &gt; TODAY() ),
$Label.ZM_Formula_In_Progress,
&quot; &quot;)
),

IF(REP_OMS_STUS_CD__c = &apos;1&apos;,
IF (FRST_ORDR_AMT__c &gt;= ORD_HOLD_AMT__c,
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &lt;= FRST_ORDER_DUE_DT__c),
$Label.ZM_Formula_Yes,
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &gt; FRST_ORDER_DUE_DT__c),
$Label.ZM_Formula_No,
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &gt;= TODAY() ),
$Label.ZM_Formula_In_Progress,
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &lt; TODAY() ),
$Label.ZM_Formula_Yes,
&quot; &quot;)
)
)
),
&quot; &quot;) ,
IF(FRST_ORDR_AMT__c &lt; ORD_HOLD_AMT__c ,
IF(FRST_ORDR_PD_DT__c != null,
$Label.ZM_Formula_No,
IF(AND(FRST_ORDR_PD_DT__c = null, TODAY() &gt; FRST_ORDER_DUE_DT__c),
$Label.ZM_Formula_No,
&quot; &quot;)
),
IF(REP_OMS_STUS_CD__c = &apos;0&apos;,
$Label.ZM_Formula_Removed_Representative,
$Label.ZM_Formula_Not_Valid_Recruit_or_Representative_Value)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPA Achievement</label>
        <type>Text</type>
    </fields>
</CustomObject>